Header margin set to 0 becuase messed up on mobile but isn't fixed

--- a/style.css
+++ b/style.css
@@ -53,10 +53,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .header {
-        margin: 0;
-        padding: 0;
-    }
     .nav-menu {
         position: fixed;
         left: -100%;
